styles.css
body {
  font-family: 'Open Sans', sans-serif;
  font-weight: 300;
}

header {
  background-color: #404041;
  color: #E6E7E8;
  font-size: 3rem;
  height: 90px;
  width: 100%;
  text-align: center;
}

h1 {
  padding-top: 16px;
}

span {
  color: #ED458B;
  font-weight: 700;
}

#main-content {
  text-align: center;
}

#user-input {
  display: block;
  font-family: 'Open Sans', sans-serif;
  font-size: 1.2rem;
  height: 30px;
  width: 350px;
  margin: 40px auto;
  outline: none;
  text-indent: 8px;
}

button {
  background-color: #D0D2D3;
  border: none;
  color: #FFFFFF;
  font-size: 1.3rem;
  margin: 0 10px;
  text-align: center;
  display: inline-block;
  border-radius:25px 25px 25px 25px;
  width: 165px;
  height: 35px;
  outline: none;
}

button:hover {
  background-color: #EB008B;
  cursor: pointer;
  transition-duration: 0.5s;
}

#results {
  margin: 40px;
}

h2 {
  font-size: 1.5rem;
}

h3 {
  color: #ED458B;
  font-size: 12rem;
  margin: 10px;
}

#reset {
  font-size: 1rem;
  height: 30px;
  width: 350px;
}

@media screen and (max-width: 500px) {
  header {
    font-size: 2.8rem;
    height: 84px;
  }

  #user-input {
    font-size: 1.3rem;
    height: 45px;
    margin: 30px auto;
  }

  button, #reset {
    display: block;
    margin: 0 auto;
    height: 45px;
    width: 360px;;
  }

  #guess {
   margin-bottom: 20px;
  }

  h2 {
    font-size: 1.4rem;
  }

  h3 {
    font-size: 11rem;
  }
}

